# derivation32/Cargo.toml
# 20210706
# ceca69ec8e1bcad6c6d79e1dcf7214ff67766580a62b7d19a6fb094c97b4f2dc

[package]
name = "derivation32"
version = "1.0.0"
authors = ["ceca69ec8e1bcad6c6d79e1dcf7214ff67766580a62b7d19a6fb094c97b4f2dc"]
edition = "2018"
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md"
]
description = "Implementation of bip-0032 for use on command line interface."
documentation = "https://github.com/ceca69ec/derivation32"
homepage = "https://github.com/ceca69ec/derivation32"
repository = "https://github.com/ceca69ec/derivation32"
keywords = [
	"bip-0032",
	"bitcoin",
	"cli",
	"derivation",
	"deterministic",
]
categories = ["command-line-interface"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
aes = "0.7.4"
bech32 = "0.8.1"
bs58 = "0.4.0"
clap = "2.33.3"
hmac = "0.11.0"
ripemd160 = "0.9.1"
scrypt = { version = "0.7.0", default-features = false }
secp256k1 = "0.20.3"
sha2 = "0.9.5"
unicode-normalization = "0.1.19"
